new unread icon for text channels

--- a/NotAnotherAnimeThemeSCSL.theme.css
+++ b/NotAnotherAnimeThemeSCSL.theme.css
@@ -374,3 +374,14 @@
 .headerPlaying-j0WQBV {
     background: #000000;
 }
+
+.unread-1Dp-OI {
+    background-color: hsla(0, 0%, 100%, 0.43);
+    border-radius: 100px;
+    height: 8px;
+    left: 0px;
+    margin-top: -3px;
+    position: absolute;
+    top: 50%;
+    width: 8px;
+}
