--- a/NotAnotherAnimeThemeSCSL.theme.css
+++ b/NotAnotherAnimeThemeSCSL.theme.css
@@ -30,9 +30,9 @@
 /* If you don't want a custom friends icon just delete this small section of code */
 .guilds-wrapper .guilds .friends-icon {
     background-image: url(https://s-media-cache-ak0.pinimg.com/originals/26/64/b5/2664b58e5882ff735aef9019d7f2bd3e.jpg);
-    background-position: top left;
+    background-position: top left; /* This is the section of the image that you want to use, for exmaple this is using the top left of the image, you would probably want to change this to center or top center */
     background-repeat: no-repeat;
-    background-size: 230%;
+    background-size: 230%; /* This is how zoomed in your image will be, change this back to 100% and increase or decrease as needed */
     height: 50px;
     width: 50px;
 }
