--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -1,3 +1,5 @@
+//META{"name":"dsclcsscode","description":"Anime theme made by puckzxz#2080, make sure you're up to date at https://goo.gl/jfR9BS , Get support here https://discord.gg/FdZhbjY","author":"puckzxz#2080","version":"1.0.0"}*//{}
+
 /* Don't touch this */
 
 .container-2lgZY8 {
