--- a/css/scsl.css
+++ b/css/scsl.css
@@ -202,7 +202,7 @@
 }
 
 .scroller-wrap .scroller::-webkit-scrollbar {
-    width: 10px;
+    width: 10px !important;
 }
 
 .theme-dark .friends-table .scroller-wrap ::-webkit-scrollbar-track-piece, .theme-dark .messages-wrapper .scroller-wrap ::-webkit-scrollbar-track-piece {
@@ -369,4 +369,34 @@
 .private-channels .channel:hover a {
     background-color: rgba(255,255,255, .15);
     color: #fff;
+}
+
+.guilds-wrapper .guilds .guild.selected:before,
+.guilds-wrapper .guilds .guild.unread:before {
+    transition: .15s ease-in-out;
+}
+
+.guilds-wrapper .guilds .guild.selected:hover:before,
+.guilds-wrapper .guilds .guild.unread:hover:before {
+    border-radius: 15px !important;
+}
+
+.guilds-wrapper .guilds .guild.unread:before {
+    background: rgba(67, 181, 129, 0.8);
+    animation: hue-rotate 8s linear infinite;
+}
+
+@keyframes hue-rotate {
+    0% {
+        -webkit-filter: hue-rotate(0);
+        -moz-filter: hue-rotate(0);
+        -ms-filter: hue-rotate(0);
+        filter: hue-rotate(0);
+    }
+    100% {
+        -webkit-filter: hue-rotate(360deg);
+        -moz-filter: hue-rotate(360deg);
+        -ms-filter: hue-rotate(360deg);
+        filter: hue-rotate(360deg);
+    }
 }
