--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -490,3 +490,23 @@
         filter: hue-rotate(360deg);
     }
 }
+
+
+/* Questionable */
+.guilds-wrapper .guilds .guild .guild-inner a {
+    color: #fff;
+    display: block;
+    border-radius: 100px;
+    height: 50px;
+    width: 50px;
+}
+
+.guilds-wrapper .guilds .guild .guild-inner {
+    background: rgba(0, 0, 0, 0);
+    border-radius: 25px;
+    cursor: pointer;
+    font-size: 18px;
+    line-height: 50px;
+    overflow: hidden;
+    text-align: center;
+}
