--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -490,3 +490,11 @@
         filter: hue-rotate(360deg);
     }
 }
+
+.guilds-wrapper .guilds .guild {
+    transition: .3s;
+}
+
+.guilds-wrapper .guilds .guild:hover {
+   transform: scale(1.08);
+}
