--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -421,7 +421,7 @@
 }
 
 .unread-1Dp-OI {
-    background-color: hsla(0, 0%, 100%, 0.3);
+    background-color: rgba(67, 181, 129, .6);
     border-radius: 100px;
     height: 8px;
     left: -4px;
@@ -429,6 +429,7 @@
     position: absolute;
     top: 50%;
     width: 8px;
+    animation: hue-rotate 8s linear infinite;
 }
 
 
