--- a/NotAnotherAnimeThemeSCSL.theme.css
+++ b/NotAnotherAnimeThemeSCSL.theme.css
@@ -36,6 +36,9 @@
     width: 50px;
 }
 
+
+
+
 /* Don't touch this */
 
 .container-2lgZY8 {
@@ -65,6 +68,7 @@
     height: 52px;
     margin-bottom: 0px;
     padding: 0 10px;
+    border-top: 1px solid hsla(0,0%,100%,.1);
 }
 
 .theme-dark .title-3qD0b- {
@@ -228,7 +232,7 @@
 
 
 .scroller-wrap .scroller::-webkit-scrollbar-track-piece {
-    background-color: rgba(0, 0, 0, 0);
+    background-color: rgba(255, 255, 255, .5);
 }
 
 .scroller-wrap .scroller::-webkit-scrollbar-thumb, .scroller-wrap .scroller::-webkit-scrollbar-track-piece {
@@ -236,6 +240,28 @@
     background-color: rgba(255, 255, 255, 0.15);
     border: 3px solid rgba(0, 0, 0, 0);
     border-radius: 7px;
+}
+
+.scroller-wrap .scroller::-webkit-scrollbar {
+    width: 10px !important;
+}
+
+.theme-dark .friends-table .scroller-wrap ::-webkit-scrollbar-track-piece, .theme-dark .messages-wrapper .scroller-wrap ::-webkit-scrollbar-track-piece {
+    background-color: rgba(0, 0, 0, 0);
+    border-color: rgba(0, 0, 0, 0);
+}
+
+.theme-dark .friends-table .scroller-wrap ::-webkit-scrollbar-thumb, .theme-dark .messages-wrapper .scroller-wrap ::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.15);
+    border-color: rgba(255, 255, 255, 0.15);
+}
+
+.theme-dark .scrollerThemed-2oenus.themeGhostHairline-DBD-2d .scroller-2FKFPG::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.15);
+}
+
+.scrollerThemed-2oenus.themeGhostHairlineChannels-3G0x9_ .scroller-2FKFPG::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.15);
 }
 
 .guilds-wrapper .guilds .guild.unread::before {
@@ -346,14 +372,15 @@
 }
 
 .unread-1Dp-OI {
-    background-color: hsla(0, 0%, 100%, 0.3);
+    background-color: rgba(67, 181, 129, .6);
     border-radius: 100px;
     height: 8px;
-    left: 4px;
+    left: -4px;
     margin-top: -4px;
     position: absolute;
     top: 50%;
     width: 8px;
+    animation: hue-rotate 8s linear infinite;
 }
 
 
@@ -371,4 +398,93 @@
 .theme-dark .friends-table .messages .message-group-blocked.revealed, .theme-dark .messages-wrapper .messages .message-group-blocked.revealed {
     background: rgba(240, 71, 71, 0.1);
     border-color: #f04747;
+}
+
+.base-3dtUhz {
+    border-radius: 0;
+}
+
+.video-1FfuMD {
+    background-color: rgba(0,0,0,.15) !important;
+}
+
+.private-channels .channel:hover a {
+    background-color: rgba(255,255,255, .15);
+    color: #fff;
+}
+
+.guilds-wrapper .guilds .guild.selected:before,
+.guilds-wrapper .guilds .guild.unread:before {
+    transition: .15s ease-in-out;
+}
+
+.guilds-wrapper .guilds .guild.selected:hover:before,
+.guilds-wrapper .guilds .guild.unread:hover:before {
+    border-radius: 25px !important;
+}
+
+.guilds-wrapper .guilds .guild.unread:before {
+    background: rgba(67, 181, 129, 0.8);
+    animation: hue-rotate 8s linear infinite;
+}
+
+@keyframes hue-rotate {
+    0% {
+        -webkit-filter: hue-rotate(0);
+        -moz-filter: hue-rotate(0);
+        -ms-filter: hue-rotate(0);
+        filter: hue-rotate(0);
+    }
+    100% {
+        -webkit-filter: hue-rotate(360deg);
+        -moz-filter: hue-rotate(360deg);
+        -ms-filter: hue-rotate(360deg);
+        filter: hue-rotate(360deg);
+    }
+}
+
+.guilds-wrapper .guilds .guild {
+    transition: .3s;
+}
+
+.guilds-wrapper .guilds .guild:hover {
+   transform: scale(1.08);
+}
+
+.guilds-wrapper .guilds .dms .guild {
+    transition: .3s;
+}
+
+.guilds-wrapper .guilds .dms .guild:hover {
+   transform: scale(1.08) !important;
+}
+
+.guilds-wrapper .guilds .guild .guild-inner a {
+    color: #fff;
+    display: block;
+    border-radius: 100px;
+    height: 50px;
+    width: 50px;
+}
+
+.guilds-wrapper .guilds .guild .guild-inner {
+    background: rgba(0, 0, 0, 0);
+    border-radius: 25px;
+    cursor: pointer;
+    font-size: 18px;
+    line-height: 50px;
+    overflow: hidden;
+    text-align: center;
+}
+
+.private-channels .channel.selected .status {
+    border-color: transparent;
+}
+
+.private-channels .channel:hover .status {
+    border-color: transparent;
+}
+
+.private-channels .status {
+    border: 2px solid transparent;
 }
