--- a/NotAnotherAnimeThemeTCSL.theme.css
+++ b/NotAnotherAnimeThemeTCSL.theme.css
@@ -1,7 +1,7 @@
 //META{"name":"NotAnotherAnimeThemeTCSL","description":"Anime theme made by puckzxz#2080, make sure you're up to date at https://goo.gl/jfR9BS , Get support here https://discord.gg/FdZhbjY","author":"puckzxz#2080","version":"1.0"}*//{}
 @import url(https://8xs4qxklp8.execute-api.us-east-2.amazonaws.com/release/gorawgit?giturl=/puckzxz/NotAnotherAnimeTheme/dev/css/tcsl.css);
 
-/*To make editing this theme easier I recommend using Notepad++ , you can download it for free here - https://notepad-plus-plus.org/download/ */
+/* To make editing this theme easier I recommend using Notepad++ , you can download it for free here - https://notepad-plus-plus.org/download/ */
 
 
 /*Any images you use MUST end with .jpg or .png or any other image extension*/
@@ -14,21 +14,22 @@
 
 
 /* Edit this to change your background */
+/* Change the URL to whatever image you want */
 [class~=app] {
-    background: url(https://raw.githubusercontent.com/WhatDaPuck/NotAnotherAnimeTheme/master/image/PTT4OKi.jpg) !important;
-    background-size: cover !important;
+    background: url(https://raw.githubusercontent.com/WhatDaPuck/NotAnotherAnimeTheme/master/image/PTT4OKi.jpg) !important; /* The URL of the background image you want */
+    background-size: cover !important; /* No need to edit this */
 }
 
 
 /* Edit this to change your friends icon picture */
 /* If you don't want a custom friends icon just delete this small section of code */
 .guilds-wrapper .guilds .friends-icon {
-    background-image: url(https://s-media-cache-ak0.pinimg.com/originals/26/64/b5/2664b58e5882ff735aef9019d7f2bd3e.jpg);
+    background-image: url(https://s-media-cache-ak0.pinimg.com/originals/26/64/b5/2664b58e5882ff735aef9019d7f2bd3e.jpg); /* The URL of the friends icon image you want */
     background-position: top left; /* This is the section of the image that you want to use, for exmaple this is using the top left of the image, you would probably want to change this to center or top center */
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; /* No need to edit this */
     background-size: 230%; /* This is how zoomed in your image will be, change this back to 100% and increase or decrease as needed */
-    height: 50px;
-    width: 50px;
+    height: 50px; /* No need to edit this */
+    width: 50px; /* No need to edit this */
 }
 
 
