--- a/css/scsl.css
+++ b/css/scsl.css
@@ -492,3 +492,7 @@
     background: rgba(255, 255, 255, .15);
     border-color: transparent;
 }
+
+.theme-dark #friends .tab-bar .tab-bar-item:hover:not(.selected) {
+    background-color: rgba(255,255,255,.15);
+}
