--- a/css/scsl.css
+++ b/css/scsl.css
@@ -384,7 +384,17 @@
 
 .guilds-wrapper .guilds .guild.unread:before {
     background: rgba(67, 181, 129, 0.8);
-    animation: hue-rotate 8s linear infinite;
+    /*animation: hue-rotate 8s linear infinite;*/
+    animation: color-rotate 3s linear infinite !important;
+}
+
+@keyframes color-rotate {
+    {
+      0%   {background: rgba(255,255,255,.8);}
+      33,3%  {background: rgba(0,0,0,.6);}
+      66,6%  {background: rgba(255,255,255,.8);}
+      100%  {background: rgba(0,0,0,.6);}
+    }
 }
 
 @keyframes hue-rotate {
@@ -496,3 +506,69 @@
 .theme-dark #friends .tab-bar .tab-bar-item:hover:not(.selected) {
     background-color: rgba(255,255,255,.15);
 }
+
+/* extras optional */
+.theme-dark .topSectionNormal-2-vo2m {
+    background-color: rgba(22,22,22,.6);
+}
+
+.theme-dark .body-3ND3kc {
+    background-color: rgba(33,33,33,.6);
+}
+
+.theme-dark .messagesPopoutWrap-1MQ1bW .header-ykumBX {
+    background-color: rgba(22,22,22,.6);
+}
+
+.theme-dark .messagesPopoutWrap-1MQ1bW {
+    background-color: rgba(33,33,33,.6);
+}
+
+.theme-dark .messagesPopoutWrap-1MQ1bW .messagesPopout-24nkyi .message-group {
+    background-color: rgba(11,11,11,.6);
+}
+
+.theme-dark .messagesPopoutWrap-1MQ1bW .messagesPopout-24nkyi .message-group .actionButtons-1sUUug .jumpButton-3DTcS_ {
+    background-color: rgba(33,33,33,.6);
+    color: hsla(0,0%,100%,.8);
+}
+
+.actionButtons-1sUUug {
+    box-shadow: none;
+}
+
+.theme-dark .themed-popout .header {
+    background-color: rgba(22,22,22,.6);
+}
+
+.theme-dark .themed-popout {
+    background-color: rgba(33,33,33,.6);
+}
+
+.theme-dark .private-channel-recipients-invite .friend.selected, .theme-dark .private-channel-recipients-invite .friend:hover {
+    background: rgba(0,0,0,.05);
+}
+
+.theme-dark .private-channel-recipients-invite .friend {
+    background: rgba(0,0,0,.5);
+    color: #fff;
+}
+
+.theme-dark .quickswitcher-3JagVE {
+    background-color: rgba(22,22,22,.6);
+    color: #dcddde;
+}
+
+.theme-dark .input-2VB9rf {
+    background-color: rgba(11,11,11,.8);
+}
+
+.theme-dark .menu-Sp6bN1 {
+    background: rgba(0,0,0,.8);
+}
+
+.theme-dark .item-1GzJrl:hover {
+    background-color: rgba(255,255,255,.15);
+}
+
+/* end extras */
