--- a/css/scsl.css
+++ b/css/scsl.css
@@ -389,12 +389,10 @@
 }
 
 @keyframes color-rotate {
-    {
-      0%   {background: rgba(255,255,255,.8);}
-      33,3%  {background: rgba(0,0,0,.6);}
-      66,6%  {background: rgba(255,255,255,.8);}
-      100%  {background: rgba(0,0,0,.6);}
-    }
+    0%   {background: rgba(255,255,255,.8);}
+    33,3%  {background: rgba(0,0,0,.6);}
+    66,6%  {background: rgba(255,255,255,.8);}
+    100%  {background: rgba(0,0,0,.6);}
 }
 
 @keyframes hue-rotate {
@@ -574,5 +572,5 @@
 /* end extras */
 
 .unread-mentions-indicator-bottom {
-    display: none;
+    display: none !important;
 }
