--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -661,6 +661,6 @@
 
 /* end extras */
 
-.unread-mentions-indicator-bottom {
+div.unread-mentions-indicator-bottom {
     display: none !important;
 }
