--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -561,7 +561,7 @@
     width: 100% !important;
     text-align: center;
     border-radius: 0 !important;
-    background-color: rgba(255, 255, 255, .1);
+    background-color: rgba(240,71,71,1);
     padding: 2px 0;
 }
 
@@ -570,7 +570,7 @@
 }
 
 .theme-dark .friends-table .messages .divider.divider-red>span, .theme-dark .messages-wrapper .messages .divider.divider-red>span {
-    color: rgba(240, 71, 71, 0.6);
+    color: #fff;
 }
 
 .theme-dark .message-group .comment .markup code.inline, .theme-dark .message-group .comment .markup pre code {
