--- a/css/scsl.css
+++ b/css/scsl.css
@@ -576,3 +576,7 @@
 .theme-dark .member-3W1lQa:hover .content-OzHfo4 .status-2s6iDp {
     border-color: rgba(0,0,0,0);
 }
+
+.message-group.compact.message-group {
+    padding: 7px 0;
+}
