--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -745,3 +745,7 @@ div.unread-mentions-indicator-bottom {
 .message-group.compact.message-group {
     padding: 7px 0;
 }
+
+.theme-dark .wrapper-29NfPK {
+    background-color: rgba(0, 0, 0, 0);
+}
