--- a/css/scsl.css
+++ b/css/scsl.css
@@ -580,3 +580,7 @@
 .message-group.compact.message-group {
     padding: 7px 0;
 }
+
+.theme-dark .wrapper-29NfPK {
+    background-color: rgba(0, 0, 0, 0);
+}
