hotfix for games tab

--- a/css/scsl.css
+++ b/css/scsl.css
@@ -584,3 +584,7 @@
 .theme-dark .wrapper-29NfPK {
     background-color: rgba(0, 0, 0, 0);
 }
+
+.theme-dark .activityFeed-28jde9 {
+    background-color: rgba(0, 0, 0, 0.8);
+}
