--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -749,3 +749,7 @@ div.unread-mentions-indicator-bottom {
 .theme-dark .wrapper-29NfPK {
     background-color: rgba(0, 0, 0, 0);
 }
+
+.theme-dark .activityFeed-28jde9 {
+    background-color: rgba(0, 0, 0, 0.8);
+}
