--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -678,3 +678,7 @@ div.unread-mentions-indicator-bottom {
 .theme-dark .wrapper-29NfPK {
     background-color: rgba(0, 0, 0, 0);
 }
+
+.theme-dark .activityFeed-28jde9 {
+    background-color: rgba(0, 0, 0, 0.8);
+}
