--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -293,7 +293,6 @@
 }
 
 .guilds-wrapper .guilds .guild.unread:before {
-    background: rgba(255, 0, 0, 0.3);
     border-radius: 100px;
     height: 50px;
     margin-top: 0;
@@ -459,6 +458,10 @@
 .private-channels .channel:hover a {
     background-color: rgba(255,255,255, .15);
     color: #fff;
+}
+
+.guilds-wrapper .guilds .guild-icon {
+    border-radius: 100% !important;
 }
 
 .guilds-wrapper .guilds .guild.selected:hover:before,
