--- a/css/scsl.css
+++ b/css/scsl.css
@@ -586,7 +586,7 @@
 
 .guilds-wrapper .guilds .guild.unread:before {
     background: rgba(67, 181, 129, 0.8);
-    animation: hue-rotate 3s linear infinite; /*, color-rotate 4s linear infinite !important*/
+    animation: hue-rotate 3s linear infinite;
 }
 
 @keyframes hue-rotate {
